--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=8081
-#spring.datasource.url = jdbc:h2:file:/data/brickorders
 spring.datasource.url=jdbc:h2:mem:bricksdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto="create-drop"
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.show_sql=true
