--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 server.port=8081
-spring.datasource.url=jdbc:h2:mem:bricksdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.hbm2ddl.auto=create-drop
-spring.jpa.show_sql=true
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=bricksdb
