--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8081
 spring.h2.console.enabled=true
+spring.datasource.platform=h2
 spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:h2:mem:bricksdb
 spring.datasource.name=bricksdb
