--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8081
 spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:h2:mem:bricksdb
-spring.datasource.name=bricksdb
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:~/bricksdb
+spring.datasource.username=sa
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.h2.Driver
+
